✅[Resource Sharing Form] fixed alignment of the input fields in the form  (#940)
* fix alignment of resource sharing form

* responsive resource sharing form

* fix .env file

--- a/frontend/src/pages/Resources/components/ResourceSharingForm/resource-sharing-form.module.scss
+++ b/frontend/src/pages/Resources/components/ResourceSharingForm/resource-sharing-form.module.scss
@@ -80,8 +80,7 @@
 
 .resource-input {
   position: relative;
-  margin-bottom: 30px !important;
-  width: 35rem;
+  margin-bottom: 8px;
 }
 
 .resource-input input,
@@ -218,11 +217,8 @@
 }
 
 .inside-resource {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   width: 85%;
+  margin: 0 auto;
 }
 
 [type="radio"] {
@@ -356,23 +352,6 @@ input[type="date"]:not(:valid):before {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-@media screen and (max-width: 1200px) {
-  .resource-input {
-    width: 23rem;
-  }
-
-  .toppings-list {
-    display: flex;
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 750px) {
-  .resource-input {
-    width: auto;
-  }
 }
 
 @media screen and (max-width: 750px) {
